# etherz

./: BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  build_output.txt  run_output.txt
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  Doxyfile  QUICKSTART.md  ROADMAP.md
examples/: dns_lookup.cpp  echo_server.cpp  ping_tool.cpp  subnet_calc.cpp
include/: etherz.hpp
include/async/: async_socket.hpp  event_loop.hpp  poll.hpp
include/core/: error.hpp  formatters.hpp
include/net/: dns.hpp  internet_protocol.hpp  network_interface.hpp  ping.hpp  socket.hpp  socket_address.hpp  subnet.hpp  tcp.hpp  udp.hpp  udp_socket.hpp
include/protocol/: http.hpp  http_client.hpp  http_server.hpp  url.hpp  websocket.hpp
include/security/: certificate.hpp  tls_context.hpp  tls_socket.hpp
reviews/: review_20262002.md
src/: main.cpp
tests/: test_certificate.cpp  test_framework.hpp  test_http.cpp  test_ip.cpp  test_main.cpp  test_subnet.cpp  test_url.cpp  test_websocket.cpp
